crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLE2512_invalid_characters.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
---
invalid_characters.py:24:12: PLE2512 [*] Invalid unescaped character SUB, use "\x1A" instead
   |
22 | cr_ok = f'\\r'
23 | 
24 | sub = 'sub '
   |             PLE2512
25 | sub = f'sub '
   |
   = help: Replace with escape sequence

ℹ Fix
21 21 | cr_ok = '\\r'
22 22 | cr_ok = f'\\r'
23 23 | 
24    |-sub = 'sub '
   24 |+sub = 'sub \x1A'
25 25 | sub = f'sub '
26 26 | 
27 27 | sub_ok = '\x1a'

invalid_characters.py:25:13: PLE2512 [*] Invalid unescaped character SUB, use "\x1A" instead
   |
24 | sub = 'sub '
25 | sub = f'sub '
   |              PLE2512
26 | 
27 | sub_ok = '\x1a'
   |
   = help: Replace with escape sequence

ℹ Fix
22 22 | cr_ok = f'\\r'
23 23 | 
24 24 | sub = 'sub '
25    |-sub = f'sub '
   25 |+sub = f'sub \x1A'
26 26 | 
27 27 | sub_ok = '\x1a'
28 28 | sub_ok = f'\x1a'

invalid_characters.py:55:25: PLE2512 [*] Invalid unescaped character SUB, use "\x1A" instead
   |
53 | zwsp_after_multicharacter_grapheme_cluster = f"ಫ್ರಾನ್ಸಿಸ್ಕೊ ​​"
54 | 
55 | nested_fstrings = f'{f'{f''}'}'
   |                         PLE2512
   |
   = help: Replace with escape sequence

ℹ Fix
52 52 | zwsp_after_multicharacter_grapheme_cluster = "ಫ್ರಾನ್ಸಿಸ್ಕೊ ​​"
53 53 | zwsp_after_multicharacter_grapheme_cluster = f"ಫ್ರಾನ್ಸಿಸ್ಕೊ ​​"
54 54 | 
55    |-nested_fstrings = f'{f'{f''}'}'
   55 |+nested_fstrings = f'{f'\x1A{f''}'}'


