crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLE2513_invalid_characters.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
---
invalid_characters.py:30:16: PLE2513 [*] Invalid unescaped character ESC, use "\x1B" instead
   |
28 | sub_ok = f'\x1a'
29 | 
30 | esc = 'esc esc '
   |                 PLE2513
31 | esc = f'esc esc '
   |
   = help: Replace with escape sequence

ℹ Fix
27 27 | sub_ok = '\x1a'
28 28 | sub_ok = f'\x1a'
29 29 | 
30    |-esc = 'esc esc '
   30 |+esc = 'esc esc \x1B'
31 31 | esc = f'esc esc '
32 32 | 
33 33 | esc_ok = '\x1b'

invalid_characters.py:31:17: PLE2513 [*] Invalid unescaped character ESC, use "\x1B" instead
   |
30 | esc = 'esc esc '
31 | esc = f'esc esc '
   |                  PLE2513
32 | 
33 | esc_ok = '\x1b'
   |
   = help: Replace with escape sequence

ℹ Fix
28 28 | sub_ok = f'\x1a'
29 29 | 
30 30 | esc = 'esc esc '
31    |-esc = f'esc esc '
   31 |+esc = f'esc esc \x1B'
32 32 | 
33 33 | esc_ok = '\x1b'
34 34 | esc_ok = f'\x1b'

invalid_characters.py:55:29: PLE2513 [*] Invalid unescaped character ESC, use "\x1B" instead
   |
53 | zwsp_after_multicharacter_grapheme_cluster = f"ಫ್ರಾನ್ಸಿಸ್ಕೊ ​​"
54 | 
55 | nested_fstrings = f'{f'{f''}'}'
   |                            PLE2513
   |
   = help: Replace with escape sequence

ℹ Fix
52 52 | zwsp_after_multicharacter_grapheme_cluster = "ಫ್ರಾನ್ಸಿಸ್ಕೊ ​​"
53 53 | zwsp_after_multicharacter_grapheme_cluster = f"ಫ್ರಾನ್ಸಿಸ್ಕೊ ​​"
54 54 | 
55    |-nested_fstrings = f'{f'{f''}'}'
   55 |+nested_fstrings = f'{f'{f'\x1B'}'}'


