crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLE2515_invalid_characters.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
---
invalid_characters.py:44:13: PLE2515 [*] Invalid unescaped character zero-width-space, use "\u200B" instead
   |
42 | nul_ok = f'\0'
43 | 
44 | zwsp = 'zero​width'
   |              PLE2515
45 | zwsp = f'zero​width'
   |
   = help: Replace with escape sequence

ℹ Fix
41 41 | nul_ok = '\0'
42 42 | nul_ok = f'\0'
43 43 | 
44    |-zwsp = 'zero​width'
   44 |+zwsp = 'zero\u200bwidth'
45 45 | zwsp = f'zero​width'
46 46 | 
47 47 | zwsp_ok = '\u200b'

invalid_characters.py:45:14: PLE2515 [*] Invalid unescaped character zero-width-space, use "\u200B" instead
   |
44 | zwsp = 'zero​width'
45 | zwsp = f'zero​width'
   |               PLE2515
46 | 
47 | zwsp_ok = '\u200b'
   |
   = help: Replace with escape sequence

ℹ Fix
42 42 | nul_ok = f'\0'
43 43 | 
44 44 | zwsp = 'zero​width'
45    |-zwsp = f'zero​width'
   45 |+zwsp = f'zero\u200bwidth'
46 46 | 
47 47 | zwsp_ok = '\u200b'
48 48 | zwsp_ok = f'\u200b'

invalid_characters.py:50:36: PLE2515 [*] Invalid unescaped character zero-width-space, use "\u200B" instead
   |
48 | zwsp_ok = f'\u200b'
49 | 
50 | zwsp_after_multibyte_character = "ಫ​"
   |                                     PLE2515
51 | zwsp_after_multibyte_character = f"ಫ​"
52 | zwsp_after_multicharacter_grapheme_cluster = "ಫ್ರಾನ್ಸಿಸ್ಕೊ ​​"
   |
   = help: Replace with escape sequence

ℹ Fix
47 47 | zwsp_ok = '\u200b'
48 48 | zwsp_ok = f'\u200b'
49 49 | 
50    |-zwsp_after_multibyte_character = "ಫ​"
   50 |+zwsp_after_multibyte_character = "ಫ\u200b"
51 51 | zwsp_after_multibyte_character = f"ಫ​"
52 52 | zwsp_after_multicharacter_grapheme_cluster = "ಫ್ರಾನ್ಸಿಸ್ಕೊ ​​"
53 53 | zwsp_after_multicharacter_grapheme_cluster = f"ಫ್ರಾನ್ಸಿಸ್ಕೊ ​​"

invalid_characters.py:51:37: PLE2515 [*] Invalid unescaped character zero-width-space, use "\u200B" instead
   |
50 | zwsp_after_multibyte_character = "ಫ​"
51 | zwsp_after_multibyte_character = f"ಫ​"
   |                                      PLE2515
52 | zwsp_after_multicharacter_grapheme_cluster = "ಫ್ರಾನ್ಸಿಸ್ಕೊ ​​"
53 | zwsp_after_multicharacter_grapheme_cluster = f"ಫ್ರಾನ್ಸಿಸ್ಕೊ ​​"
   |
   = help: Replace with escape sequence

ℹ Fix
48 48 | zwsp_ok = f'\u200b'
49 49 | 
50 50 | zwsp_after_multibyte_character = "ಫ​"
51    |-zwsp_after_multibyte_character = f"ಫ​"
   51 |+zwsp_after_multibyte_character = f"ಫ\u200b"
52 52 | zwsp_after_multicharacter_grapheme_cluster = "ಫ್ರಾನ್ಸಿಸ್ಕೊ ​​"
53 53 | zwsp_after_multicharacter_grapheme_cluster = f"ಫ್ರಾನ್ಸಿಸ್ಕೊ ​​"
54 54 | 

invalid_characters.py:52:60: PLE2515 [*] Invalid unescaped character zero-width-space, use "\u200B" instead
   |
50 | zwsp_after_multibyte_character = "ಫ​"
51 | zwsp_after_multibyte_character = f"ಫ​"
52 | zwsp_after_multicharacter_grapheme_cluster = "ಫ್ರಾನ್ಸಿಸ್ಕೊ ​​"
   |                                                         PLE2515
53 | zwsp_after_multicharacter_grapheme_cluster = f"ಫ್ರಾನ್ಸಿಸ್ಕೊ ​​"
   |
   = help: Replace with escape sequence

ℹ Fix
49 49 | 
50 50 | zwsp_after_multibyte_character = "ಫ​"
51 51 | zwsp_after_multibyte_character = f"ಫ​"
52    |-zwsp_after_multicharacter_grapheme_cluster = "ಫ್ರಾನ್ಸಿಸ್ಕೊ ​​"
   52 |+zwsp_after_multicharacter_grapheme_cluster = "ಫ್ರಾನ್ಸಿಸ್ಕೊ \u200b​"
53 53 | zwsp_after_multicharacter_grapheme_cluster = f"ಫ್ರಾನ್ಸಿಸ್ಕೊ ​​"
54 54 | 
55 55 | nested_fstrings = f'{f'{f''}'}'

invalid_characters.py:52:61: PLE2515 [*] Invalid unescaped character zero-width-space, use "\u200B" instead
   |
50 | zwsp_after_multibyte_character = "ಫ​"
51 | zwsp_after_multibyte_character = f"ಫ​"
52 | zwsp_after_multicharacter_grapheme_cluster = "ಫ್ರಾನ್ಸಿಸ್ಕೊ ​​"
   |                                                         PLE2515
53 | zwsp_after_multicharacter_grapheme_cluster = f"ಫ್ರಾನ್ಸಿಸ್ಕೊ ​​"
   |
   = help: Replace with escape sequence

ℹ Fix
49 49 | 
50 50 | zwsp_after_multibyte_character = "ಫ​"
51 51 | zwsp_after_multibyte_character = f"ಫ​"
52    |-zwsp_after_multicharacter_grapheme_cluster = "ಫ್ರಾನ್ಸಿಸ್ಕೊ ​​"
   52 |+zwsp_after_multicharacter_grapheme_cluster = "ಫ್ರಾನ್ಸಿಸ್ಕೊ ​\u200b"
53 53 | zwsp_after_multicharacter_grapheme_cluster = f"ಫ್ರಾನ್ಸಿಸ್ಕೊ ​​"
54 54 | 
55 55 | nested_fstrings = f'{f'{f''}'}'

invalid_characters.py:53:61: PLE2515 [*] Invalid unescaped character zero-width-space, use "\u200B" instead
   |
51 | zwsp_after_multibyte_character = f"ಫ​"
52 | zwsp_after_multicharacter_grapheme_cluster = "ಫ್ರಾನ್ಸಿಸ್ಕೊ ​​"
53 | zwsp_after_multicharacter_grapheme_cluster = f"ಫ್ರಾನ್ಸಿಸ್ಕೊ ​​"
   |                                                          PLE2515
54 | 
55 | nested_fstrings = f'{f'{f''}'}'
   |
   = help: Replace with escape sequence

ℹ Fix
50 50 | zwsp_after_multibyte_character = "ಫ​"
51 51 | zwsp_after_multibyte_character = f"ಫ​"
52 52 | zwsp_after_multicharacter_grapheme_cluster = "ಫ್ರಾನ್ಸಿಸ್ಕೊ ​​"
53    |-zwsp_after_multicharacter_grapheme_cluster = f"ಫ್ರಾನ್ಸಿಸ್ಕೊ ​​"
   53 |+zwsp_after_multicharacter_grapheme_cluster = f"ಫ್ರಾನ್ಸಿಸ್ಕೊ \u200b​"
54 54 | 
55 55 | nested_fstrings = f'{f'{f''}'}'

invalid_characters.py:53:62: PLE2515 [*] Invalid unescaped character zero-width-space, use "\u200B" instead
   |
51 | zwsp_after_multibyte_character = f"ಫ​"
52 | zwsp_after_multicharacter_grapheme_cluster = "ಫ್ರಾನ್ಸಿಸ್ಕೊ ​​"
53 | zwsp_after_multicharacter_grapheme_cluster = f"ಫ್ರಾನ್ಸಿಸ್ಕೊ ​​"
   |                                                          PLE2515
54 | 
55 | nested_fstrings = f'{f'{f''}'}'
   |
   = help: Replace with escape sequence

ℹ Fix
50 50 | zwsp_after_multibyte_character = "ಫ​"
51 51 | zwsp_after_multibyte_character = f"ಫ​"
52 52 | zwsp_after_multicharacter_grapheme_cluster = "ಫ್ರಾನ್ಸಿಸ್ಕೊ ​​"
53    |-zwsp_after_multicharacter_grapheme_cluster = f"ಫ್ರಾನ್ಸಿಸ್ಕೊ ​​"
   53 |+zwsp_after_multicharacter_grapheme_cluster = f"ಫ್ರಾನ್ಸಿಸ್ಕೊ ​\u200b"
54 54 | 
55 55 | nested_fstrings = f'{f'{f''}'}'


