crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLR0124_comparison_with_itself.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
---
comparison_with_itself.py:2:1: PLR0124 Name compared with itself, consider replacing `foo == foo`
  |
2 | # Errors.
3 | foo == foo
  | ^^^ PLR0124
4 | 
5 | foo != foo
  |

comparison_with_itself.py:4:1: PLR0124 Name compared with itself, consider replacing `foo != foo`
  |
4 | foo == foo
5 | 
6 | foo != foo
  | ^^^ PLR0124
7 | 
8 | foo > foo
  |

comparison_with_itself.py:6:1: PLR0124 Name compared with itself, consider replacing `foo > foo`
   |
 6 | foo != foo
 7 | 
 8 | foo > foo
   | ^^^ PLR0124
 9 | 
10 | foo >= foo
   |

comparison_with_itself.py:8:1: PLR0124 Name compared with itself, consider replacing `foo >= foo`
   |
 8 | foo > foo
 9 | 
10 | foo >= foo
   | ^^^ PLR0124
11 | 
12 | foo < foo
   |

comparison_with_itself.py:10:1: PLR0124 Name compared with itself, consider replacing `foo < foo`
   |
10 | foo >= foo
11 | 
12 | foo < foo
   | ^^^ PLR0124
13 | 
14 | foo <= foo
   |

comparison_with_itself.py:12:1: PLR0124 Name compared with itself, consider replacing `foo <= foo`
   |
12 | foo < foo
13 | 
14 | foo <= foo
   | ^^^ PLR0124
15 | 
16 | foo is foo
   |

comparison_with_itself.py:14:1: PLR0124 Name compared with itself, consider replacing `foo is foo`
   |
14 | foo <= foo
15 | 
16 | foo is foo
   | ^^^ PLR0124
17 | 
18 | foo is not foo
   |

comparison_with_itself.py:16:1: PLR0124 Name compared with itself, consider replacing `foo is not foo`
   |
16 | foo is foo
17 | 
18 | foo is not foo
   | ^^^ PLR0124
19 | 
20 | foo in foo
   |

comparison_with_itself.py:18:1: PLR0124 Name compared with itself, consider replacing `foo in foo`
   |
18 | foo is not foo
19 | 
20 | foo in foo
   | ^^^ PLR0124
21 | 
22 | foo not in foo
   |

comparison_with_itself.py:20:1: PLR0124 Name compared with itself, consider replacing `foo not in foo`
   |
20 | foo in foo
21 | 
22 | foo not in foo
   | ^^^ PLR0124
23 | 
24 | # Non-errors.
   |


