crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLR0133_comparison_of_constant.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
expression: diagnostics
---
- - kind:
      name: ComparisonOfConstant
      body: "Two constants compared in a comparison, consider replacing `100 == 100`"
      suggestion: ~
      fixable: false
    location:
      row: 3
      column: 3
    end_location:
      row: 3
      column: 6
    fix: ~
    parent: ~
  - kind:
      name: ComparisonOfConstant
      body: "Two constants compared in a comparison, consider replacing `1 == 3`"
      suggestion: ~
      fixable: false
    location:
      row: 6
      column: 3
    end_location:
      row: 6
      column: 4
    fix: ~
    parent: ~
  - kind:
      name: ComparisonOfConstant
      body: "Two constants compared in a comparison, consider replacing `1 != 3`"
      suggestion: ~
      fixable: false
    location:
      row: 9
      column: 3
    end_location:
      row: 9
      column: 4
    fix: ~
    parent: ~
  - kind:
      name: ComparisonOfConstant
      body: "Two constants compared in a comparison, consider replacing `4 == 3`"
      suggestion: ~
      fixable: false
    location:
      row: 13
      column: 3
    end_location:
      row: 13
      column: 4
    fix: ~
    parent: ~
  - kind:
      name: ComparisonOfConstant
      body: "Two constants compared in a comparison, consider replacing `1 > 0`"
      suggestion: ~
      fixable: false
    location:
      row: 23
      column: 3
    end_location:
      row: 23
      column: 4
    fix: ~
    parent: ~
  - kind:
      name: ComparisonOfConstant
      body: "Two constants compared in a comparison, consider replacing `1 >= 0`"
      suggestion: ~
      fixable: false
    location:
      row: 29
      column: 3
    end_location:
      row: 29
      column: 4
    fix: ~
    parent: ~
  - kind:
      name: ComparisonOfConstant
      body: "Two constants compared in a comparison, consider replacing `1 < 0`"
      suggestion: ~
      fixable: false
    location:
      row: 35
      column: 3
    end_location:
      row: 35
      column: 4
    fix: ~
    parent: ~
  - kind:
      name: ComparisonOfConstant
      body: "Two constants compared in a comparison, consider replacing `1 <= 0`"
      suggestion: ~
      fixable: false
    location:
      row: 41
      column: 3
    end_location:
      row: 41
      column: 4
    fix: ~
    parent: ~
  - kind:
      name: ComparisonOfConstant
      body: "Two constants compared in a comparison, consider replacing `\"hello\" == \"\"`"
      suggestion: ~
      fixable: false
    location:
      row: 51
      column: 3
    end_location:
      row: 51
      column: 10
    fix: ~
    parent: ~
  - kind:
      name: ComparisonOfConstant
      body: "Two constants compared in a comparison, consider replacing `True == False`"
      suggestion: ~
      fixable: false
    location:
      row: 58
      column: 3
    end_location:
      row: 58
      column: 7
    fix: ~
    parent: ~

