crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLR0911_too_many_return_statements.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
---
./resources/test/fixtures/pylint/too_many_return_statements.py:4:5: PLR0911 Too many return statements (11 > 6)
  |
4 | https://github.com/PyCQA/pylint/blob/69eca9b3f9856c3033957b769358803ee48e8e47/tests/functional/t/too/too_many_return_statements.py
5 | """
6 | def stupid_function(arg): # [too-many-return-statements]
  |     ^^^^^^^^^^^^^^^ PLR0911
7 |     if arg == 1:
8 |         return 1
  |


