crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLR0912_too_many_branches.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    name: TooManyBranches
    body: Too many branches (13/12)
    commit: ~
    fixable: false
  location:
    row: 6
    column: 4
  end_location:
    row: 6
    column: 9
  fix: ~
  parent: ~

