crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLR0913_too_many_arguments.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
---
./resources/test/fixtures/pylint/too_many_arguments.py:1:5: PLR0913 Too many arguments to function call (8 > 5)
  |
1 | def f(x, y, z, t, u, v, w, r):  # Too many arguments (8/5)
  |     ^ PLR0913
2 |     pass
  |

./resources/test/fixtures/pylint/too_many_arguments.py:17:5: PLR0913 Too many arguments to function call (6 > 5)
   |
17 | def f(x, y, z, u=1, v=1, r=1):  # Too many arguments (6/5)
   |     ^ PLR0913
18 |     pass
   |

./resources/test/fixtures/pylint/too_many_arguments.py:33:5: PLR0913 Too many arguments to function call (6 > 5)
   |
33 | def f(x, y, z, a, b, c, *, u, v, w):  # Too many arguments (6/5)
   |     ^ PLR0913
34 |     pass
   |


