crates/ruff/src/rules/pylint/snapshots/ruff__rules__pylint__tests__PLR0915_too_many_statements.py.snap
---
source: crates/ruff/src/rules/pylint/mod.rs
expression: diagnostics
---
- kind:
    name: TooManyStatements
    body: Too many statements (52/50)
    commit: ~
    fixable: false
  location:
    row: 5
    column: 10
  end_location:
    row: 5
    column: 11
  fix: ~
  parent: ~

